Initial Chance window (working)
git-svn-id: svn://svn.code.sf.net/p/dartboard/code/trunk@7 90f6e11c-143d-0410-b842-a6e069016727